# zy-OAI

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  OAI.md  README.md  _check_vcdConfig.cmake  bnProc_gen_128Config.cmake  bnProc_gen_avx2Config.cmake  bnProc_gen_avx512Config.cmake  cmake_install.cmake  cnProc_gen_128Config.cmake  cnProc_gen_avx2Config.cmake  cnProc_gen_avx512Config.cmake  du-high.conf  du-low.conf  genidsConfig.cmake  nr-cuup-load-test.c  oaiL1.nfapi.rfsim.2x2.conf  rcc.band78.tm1.106PRB.nfapi.2x2.conf  run_cu.sh  run_d-cu.sh  run_z-cu.sh
ci-scripts/: ci_infra.yaml  cls_containerize.py
ci-scripts/conf_files/: du.sa.band77.273prb.fhi72.4x4.2L-metanoia.conf  gnb-cucp.sa.f1.conf  gnb-cuup.sa.f1.conf  gnb-du.sa.band78.106prb.usrpb200.conf  gnb-vnf.sa.band66.u0.25prb.nfapi.conf  gnb.sa.band66.ntn.25prb.rfsim.conf  gnb.sa.band77.273prb.fhi72.4x4.2L-metanoia.conf  gnb.sa.band77.273prb.fhi72.4x4.4L-metanoia.conf  gnb.sa.band78.106prb.usrpb200.sc-fdma.conf
ci-scripts/xml_files/: container_sa_fhi72_metanoia_up2_2x2.xml  container_sa_fhi72_metanoia_up2_4x4.xml
cmake_targets/: build_oai  gtpu_tunnel  gtpu_tunnel.c
cmake_targets/autotests/: test_case_list.xml
cmake_targets/tools/: build_helper
common/: Makefile  cmake_install.cmake  oai_version.h
common/utils/: CMakeLists.txt  Makefile  cmake_install.cmake  oai_allocator.h  tun_if.c  tun_if.h
doc/: Doxyfile  L2NFAPI.md  Makefile  ORAN_FHI7.2_Tutorial.md  RUNMODEM.md  SW_archi.md  Z-AGF.md  cmake_install.cmake
doc/MAC/: mac-usage.md
docker/: Dockerfile.base.ubuntu22  Dockerfile.build.ubuntu22
executables/: d-cu.c  nr-cuup.c  nr-gnb.c  nr-ru.c  nr-softmodem-common.h  nr-softmodem.c  nr-ue.c  nr-uesoftmodem.c  nr-uesoftmodem.h  proxy-ue.c  softmodem-common.h  z-agf.c  z-cu.c
ldpc/generator_bnProc/: Makefile  cmake_install.cmake
ldpc/generator_bnProc_avx512/: Makefile  cmake_install.cmake
ldpc/generator_cnProc/: Makefile  cmake_install.cmake
ldpc/generator_cnProc_avx512/: Makefile  cmake_install.cmake
nfapi/: CMakeLists.txt  Makefile  cmake_install.cmake
nfapi/oai_integration/: nfapi_pnf.c  nfapi_vnf.c
nfapi/oai_integration/wls_integration/: CMakeLists.txt  wls_common.c  wls_pnf.c  wls_vnf.c
nfapi/oai_integration/wls_integration/include/: wls_common.h  wls_pnf.h  wls_vnf.h
nfapi/open-nFAPI/: Makefile  cmake_install.cmake
nfapi/tests/: Makefile  cmake_install.cmake
openair1/: Makefile  cmake_install.cmake
openair1/PHY/: Makefile  cmake_install.cmake  defs_RU.h  defs_UE.h  defs_gNB.h  defs_nr_UE.h  defs_nr_common.h  sse_intrin.h
openair1/PHY/CODING/nrLDPC_coding/nrLDPC_coding_segment/: CMakeLists.txt  Makefile  cmake_install.cmake  nrLDPC_coding_segment_encoder.c
openair1/SCHED_NR/: fapi_nr_l1.c  nr_prach_procedures.c  nr_ru_procedures.c  phy_frame_config_nr.c  phy_procedures_nr_gNB.c  sched_nr.h
openair1/SCHED_NR_UE/: fapi_nr_ue_l1.c  phy_procedures_nr_ue.c  phy_procedures_nr_ue_sl.c  pucch_uci_ue_nr.c
openair1/SCHED_UE/: phy_procedures_lte_ue.c
openair2/: Makefile  cmake_install.cmake
openair2/COMMON/: as_message.h  e1ap_messages_types.h  gtpv1_u_messages_def.h  gtpv1_u_messages_types.h  mac_messages_def.h  mac_messages_types.h  ngap_messages_types.h  rrc_messages_def.h  rrc_messages_types.h
openair2/E1AP/: Makefile  cmake_install.cmake  e1ap.c  e1ap_setup.c
openair2/E2AP/RAN_FUNCTION/: CMakeLists.txt
openair2/E2AP/RAN_FUNCTION/O-RAN/: ran_func_rc.c  ran_func_rc_extern.h  ran_func_rc_subs.c  ran_func_rc_subs.h
openair2/ENB_APP/: enb_config.c
openair2/F1AP/: Makefile  cmake_install.cmake  f1ap_cu_task.c  f1ap_du_ue_context_management.c
openair2/GNB_APP/: MACRLC_nr_paramdef.h  RRC_nr_paramsvalues.h  gnb_config.c  gnb_paramdef.h
openair2/LAYER2/: Makefile  cmake_install.cmake
openair2/M2AP/: Makefile  cmake_install.cmake
openair2/NR_PHY_INTERFACE/: NR_IF_Module.c  NR_IF_Module.h  nr_sched_response.c
openair2/NR_UE_PHY_INTERFACE/: NR_IF_Module.c
openair2/RRC/: Makefile  cmake_install.cmake
openair2/X2AP/: Makefile  cmake_install.cmake  x2ap_timers.c
openair2/XNAP/: Makefile  cmake_install.cmake
openair3/: Makefile  cmake_install.cmake
openair3/LPP/: Makefile  cmake_install.cmake
openair3/M3AP/: Makefile  cmake_install.cmake
openair3/NAS/: Makefile  cmake_install.cmake
openair3/NAS/COMMON/EMM/MSG/: CMakeLists.txt  FGSAuthenticationResponse.c  FGSAuthenticationResponse.h  FGSDeregistrationRequestUEOriginating.c  FGSDeregistrationRequestUEOriginating.h  FGSIdentityResponse.c  FGSIdentityResponse.h  FGSNASSecurityModeComplete.c  FGSNASSecurityModeComplete.h  FGSUplinkNasTransport.c  FGSUplinkNasTransport.h  Makefile  RegistrationAccept.c  RegistrationAccept.h  RegistrationComplete.c  RegistrationComplete.h  RegistrationRequest.c  RegistrationRequest.h  cmake_install.cmake  fgmm_authentication_reject.c  fgmm_authentication_reject.h  fgmm_lib.c  fgmm_lib.h  fgmm_security_mode_reject.c  fgmm_security_mode_reject.h  fgmm_service_accept.c  fgmm_service_accept.h  fgmm_service_reject.c  fgmm_service_reject.h  fgs_service_request.c  fgs_service_request.h
openair3/NGAP/: Makefile  cmake_install.cmake
openair3/NRPPA/: Makefile  cmake_install.cmake
openair3/S1AP/: Makefile  cmake_install.cmake
openair3/ocp-gtpu/: gtp_itf.cpp  gtp_itf.h  gtp_itf_addyorks.cpp  gtp_itf_d-cu.cpp  gtp_itf_d-cu.h  gtp_itf_ori.cpp  gtp_itf_pppoe.cpp  gtp_itf_z-agf.cpp  gtp_itf_z-agf1.cpp  gtp_itf_z-agf1.h  gtp_itf_z-agf2.cpp  gtp_itf_z-cu.cpp  gtp_itf_z-cu.h  gtpu_extensions.c  gtpu_extensions.h  relay.c  upef_z-agf1.cpp  upef_z-agf1.h  upef_z-agf2.cpp  upef_z-agf2.h  upef_z-cu.cpp  upef_z-cu.h  z-agf99.cpp  zyzy.h
radio/: Makefile  cmake_install.cmake
radio/fhi_72/: CMakeLists.txt  oaioran.c  (+5 more)
radio/fhi_72/mplane/: CMakeLists.txt  config-mplane.c  config-mplane.h  connect-mplane.c  connect-mplane.h  get-mplane.c  get-mplane.h  init-mplane.c  init-mplane.h  rpc-send-recv.c  rpc-send-recv.h  ru-mplane-api.c  ru-mplane-api.h  subscribe-mplane.c  subscribe-mplane.h
radio/fhi_72/mplane/xml/: get-xml.c  get-xml.h
radio/fhi_72/mplane/yang/: get-yang.c  get-yang.h
(+347 files in other folders)
